--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ release:
         --assets-link "{\"name\":\"resources.neu\", \"url\":\"${PACKAGE_REGISTRY_URL}/resources.neu\"}" \
         --assets-link "{\"name\":\"update_manifest.json\", \"url\":\"${PACKAGE_REGISTRY_URL}/update_manifest.json\"}"
     - |
-      release-cli create --name "latest" --tag-name latest \
+      release-cli update --name "latest" --tag-name latest \
         --assets-link "{\"name\":\"osmflux-darwin-arm64.app.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-darwin-arm64.app.zip\"}" \
         --assets-link "{\"name\":\"osmflux-darwin-x64.app.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-darwin-x64.app.zip\"}" \
         --assets-link "{\"name\":\"osmflux-linux-arm64.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-linux-arm64.zip\"}" \
