--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,17 +45,9 @@ release:
   script:
     - |
       release-cli create --name "$CI_COMMIT_TAG" --tag-name $CI_COMMIT_TAG \
-        --assets-link "{\"name\":\"osmflux-darwin-arm64.app.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-darwin-arm64.app.zip\"}" \
-        --assets-link "{\"name\":\"osmflux-darwin-x64.app.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-darwin-x64.app.zip\"}" \
-        --assets-link "{\"name\":\"osmflux-linux-arm64.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-linux-arm64.zip\"}" \
-        --assets-link "{\"name\":\"osmflux-linux-x64.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-linux-x64.zip\"}" \
-        --assets-link "{\"name\":\"resources.neu\", \"url\":\"${PACKAGE_REGISTRY_URL}/resources.neu\"}" \
-        --assets-link "{\"name\":\"update_manifest.json\", \"url\":\"${PACKAGE_REGISTRY_URL}/update_manifest.json\"}"
-    - |
-      release-cli update --name "latest" --tag-name latest \
-        --assets-link "{\"name\":\"osmflux-darwin-arm64.app.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-darwin-arm64.app.zip\"}" \
-        --assets-link "{\"name\":\"osmflux-darwin-x64.app.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-darwin-x64.app.zip\"}" \
-        --assets-link "{\"name\":\"osmflux-linux-arm64.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-linux-arm64.zip\"}" \
-        --assets-link "{\"name\":\"osmflux-linux-x64.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-linux-x64.zip\"}" \
+        --assets-link "{\"name\":\"osmflux-darwin-arm64.app.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-darwin-arm64.app.zip\", \"link_type\": \"package\"}" \
+        --assets-link "{\"name\":\"osmflux-darwin-x64.app.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-darwin-x64.app.zip\", \"link_type\": \"package\"}" \
+        --assets-link "{\"name\":\"osmflux-linux-arm64.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-linux-arm64.zip\", \"link_type\": \"package\"}" \
+        --assets-link "{\"name\":\"osmflux-linux-x64.zip\", \"url\":\"${PACKAGE_REGISTRY_URL}/osmflux-linux-x64.zip\", \"link_type\": \"package\"}" \
         --assets-link "{\"name\":\"resources.neu\", \"url\":\"${PACKAGE_REGISTRY_URL}/resources.neu\"}" \
         --assets-link "{\"name\":\"update_manifest.json\", \"url\":\"${PACKAGE_REGISTRY_URL}/update_manifest.json\"}"
