--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.0",
     "@neutralinojs/lib": "^3.11.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "framer-motion": "^10.16.0",
     "md5": "^2.3.0",
     "react": "^18.2.0",
