chore: correct the 'only' directive

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,10 @@ upload-gitlab-registry:
   stage: upload-gitlab-registry
   image: curlimages/curl:latest
   only:
-    - tags && main
+    refs:
+      - main
+    variables:
+      - "$CI_COMMIT_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+$
   script:
     - 'curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" --upload-file dist/archives/osmflux-darwin-arm64.app.zip ${PACKAGE_REGISTRY_URL}/osmflux-darwin-arm64.app.zip'
     - 'curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" --upload-file dist/archives/osmflux-darwin-x64.app.zip ${PACKAGE_REGISTRY_URL}/osmflux-darwin-x64.app.zip'
@@ -60,7 +63,10 @@ release-gitlab:
   stage: release-gitlab
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   only:
-    - tags && main
+    refs:
+      - main
+    variables:
+      - "$CI_COMMIT_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+$
   script:
     - |
       release-cli create --name "$CI_COMMIT_TAG" --tag-name $CI_COMMIT_TAG \
