--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.16.0",
+    "jszip": "^3.10.1",
     "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
